# malay_stt_web

./: .gitignore  pyproject.toml
malay_stt_web/speech/: speech.py
malay_stt_web/web/: app.py  html_template.py  utils.py
malay_tts_web/web/: app.py
