[tool.poetry]
name = "malay-tts-web"
version = "0.1.0"
description = ""
authors = ["Amirul Abu <amirulabu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
malaya-speech = { git = "https://github.com/mesolitica/malaya-speech.git", rev = "master" }
flask = "^3.0.2"
malaya-boilerplate = "^0.0.24"
numpy = "^1.26.4"
librosa = "^0.10.1"
herpetologist = "^0.0.9"
six = "^1.16.0"
python-speech-features = "^0.6"
torch = "^2.2.0"
unidecode = "^1.3.8"
tornado = "^6.4"
transformers = "^4.37.2"
torchaudio = "^2.2.0"
sentencepiece = "^0.1.99"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
